--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "3.10.10"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
